Fixed h2 size on small screens

--- a/styles.css
+++ b/styles.css
@@ -175,5 +175,10 @@ audio:hover {
     .favBtn{
         opacity: 1;
     }
+
+    h2{
+        margin-top: 10vh;
+        font-size: 2rem !important;
+    }
     
 }
